# halloweencam

./: .gitignore  PRIVACY.md  README.md  black_3d_pose.py  bone_manipulator.py  draw_skel.py  export_yolo.py  fluid_shaders.py  free_animated_low_poly_cartoon_skeleton.glb  ghost_effect.py  pose_estimation.py  pyproject.toml  read_glb.py  set_halloweencam_settings.sh  stam_mask_optical_flow.py  stam_mask_stable_fluids.py  stam_minimal.py  stam_mouse.py  start_halloweencam.sh  test_2d_fluids.py  test_interactive_shaders.py  test_panda3d.py  test_panda3d_animateworld.py  test_phiflow_opencv.py  test_shaders.py  test_zombie.py  ursina.py  webcam_test_script.py
.github/workflows/: ci.yml
examples/: benchmark_yolo.py  stam_mouse.py
ghoulfluids-ios/: README.md
ghoulfluids-ios/ghoulfluids-ios/: App.swift  CameraManager.swift  ContentView.swift  FluidSimulation.swift  MetalView.swift  SegmentationManager.swift  Shaders.metal
src/ghoulfluids/: __init__.py  __main__.py  ambient.py  app.py  config.py  debug.py  fluid.py  logging.py  profiler.py  segmentation.py  shaders.py  utils.py
tests/: conftest.py  test_ambient.py  test_app.py  test_cli.py  test_config.py  test_debug.py  test_fluid.py  test_fluid_step.py  test_logging.py  test_profiler.py  test_segmentation.py  test_shaders_compile.py  test_utils.py
